juno/qa/apps/report-api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: report-api
  name: report-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: report-api
  template:
    metadata:
      labels:
        app: report-api
    spec:
      containers:
        - image: index.docker.io/ferlabcrsj/api-portal-reports:ce9b7def21703fbebe550df052c259b31ee28e9d-1696434603 # {"$imagepolicy": "cqdg-qa-fluxcd:report-api"}
          name: report-api
          resources:
            requests:
              memory: "1024Mi"
              cpu: '1.00'
            limits:
              memory: "2048Mi"
              cpu: '2.00'
          volumeMounts:
            - name: opensearch-ca-cert
              mountPath: /opt/opensearch-ca
              readOnly: true
            - name: ca-bundle
              mountPath: /opt/ca-bundle
              readOnly: true
