juno/qa/apps/report-api/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: report-api
  name: report-api
spec:
  ports:
    - port: 4000
      protocol: TCP
      targetPort: 4000
  selector:
    app: report-api
