juno/qa/apps/report-api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: report-api
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - report-api.qa.juno.cqdg.ferlab.bio
      secretName: cqdg-ingress-certificate
  rules:
    - host: report-api.qa.juno.cqdg.ferlab.bio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: report-api
                port:
                  number: 4000
